test/library/standard/List/indexOf/listIndexOfHaltStart.good
listIndexOfHaltStart.chpl:10: error: halt reached - Start index for "list.indexOf" out of bounds: -1
